@@ -5,7 +5,7 @@
 MAKEJOBFLAGS = -j 2
 
 TARGETOS = i386-unknown-linux2.5
-HOSTOS = amd64-unknown-linux2.5
+HOSTOS = i386-unknown-linux2.5
 
 TARGETCC  = "gcc -march=i386 -m32"
 TARGETCXX = "g++ -march=i386 -m32"
